--- a/templates/lan-ip.html
+++ b/templates/lan-ip.html
@@ -7,7 +7,8 @@
     <title>Awesome Design</title>
 </head>
 <body>
-    <h1>Printer Latest IP Address:</h1>
+    <h1>{{device}} latest IP:</h1>
     <p>{{ latest_ip }}</p>
+    <a href="http://{{ latest_ip }}:5244">跳转至 Alist</a>
 </body>
 </html>
